--- a/src/components/MainPage.css
+++ b/src/components/MainPage.css
@@ -7,6 +7,11 @@ li
  border: 2px solid black;
  border-radius: 5px;
  margin-bottom: 5px;
+ width: 94%;
+ margin-left: 7px;
+ height: 30px;
+ padding-top: 5px;
+ padding: 10p;
 }
 
 #mainForm{
@@ -17,4 +22,27 @@ li
     border-radius: 20px;
     left: 10px;
   
+}
+#txtTask{
+    margin-top: 20px;
+    height: 30px;
+    margin-left: 15px;
+    width: 250px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+#lblMain{
+    text-align: center;
+
+}
+#btnSubmit{
+    height: 36px;
+    margin-left: 5px;
+    width: 60px;
+    border-radius: 5px;
+    border: none;
+    background-color: deepskyblue;
+    color: white;
+    /* font-size: 12px; */
+    font-weight: 900;
 }
