--- a/src/components/MainPage.css
+++ b/src/components/MainPage.css
@@ -1,17 +1,20 @@
+
 li.AnErrorHasOccured
 {
   background: #f00;
 }
 li
 {
- border: 2px solid black;
- border-radius: 5px;
- margin-bottom: 5px;
- width: 94%;
- margin-left: 7px;
- height: 30px;
- padding-top: 5px;
- padding: 10p;
+    padding-left: 5px;
+    border: 2px solid black;
+    border-radius: 5px;
+    margin-bottom: 7px;
+    width: 94%;
+    margin-left: 6px;
+    height: 30px;
+    padding-top: 5px;
+ 
+ 
 }
 
 #mainForm{
@@ -46,3 +49,23 @@ li
     /* font-size: 12px; */
     font-weight: 900;
 }
+
+li>button{
+   
+    margin-right: 5px;
+    /* width: 50px; *
+    /* height: 50px; */
+    background: none;
+    border: none;
+}
+
+li>button:first-child{
+    /* margin-right: 100px; */
+    
+}
+ li>button:nth-child(2){
+    margin-left: 150px;
+}
+li>button:nth-child(3){
+    margin-right: 180px;
+} 
