--- a/src/components/MainPage.css
+++ b/src/components/MainPage.css
@@ -50,17 +50,17 @@ li
     font-weight: 900;
 }
 
-li>button{
+li>div>button{
    
-    margin-right: 5px;
+    /* margin-right: 5px; */
     /* width: 50px; *
     /* height: 50px; */
     background: none;
     border: none;
 }
 
-li>button:first-child{
-    /* margin-right: 100px; */
+/* li>button:first-child{
+    margin-right: 100px;
     
 }
  li>button:nth-child(2){
@@ -68,4 +68,12 @@ li>button:first-child{
 }
 li>button:nth-child(3){
     margin-right: 180px;
-} 
+}  */
+
+#listBtnDiv{
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 10px;
+    margin-right: 10px;
+    margin-top: -17px;
+}
